@@ -1,42 +1,74 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+@Suppress("DSL_SCOPE_VIOLATION") // TODO: Remove once KTIJ-19369 is fixed
 plugins {
-    id("com.android.application") version "7.4.2" apply false
-    id("com.android.library") version "7.4.2" apply false
-    id("org.jetbrains.kotlin.kapt") version "1.8.20" apply false
-    id("org.jetbrains.kotlin.plugin.serialization") version "1.8.20" apply false
-    id("org.jetbrains.kotlin.android") version "1.8.20" apply false
-    id("com.google.dagger.hilt.android") version "2.45" apply false
+    alias(libs.plugins.androidApplication) apply false
+    alias(libs.plugins.androidLibrary) apply false
+    alias(libs.plugins.kotlinAndroid) apply false
+    alias(libs.plugins.hilt) apply false
+    alias(libs.plugins.kapt) apply false
+    alias(libs.plugins.serialization) apply false
+    alias(libs.plugins.kover) apply false
+    id("org.jetbrains.dokka") version "1.9.20" apply false
+    id("org.sonarqube") version "4.4.1.3373"
+    alias(libs.plugins.jetbrainsKotlinJvm) apply false
 }
 
 tasks.register("clean", Delete::class) {
-    delete(rootProject.buildDir)
+    delete(rootProject.layout.buildDirectory.get().asFile.path)
 }
 
-fun Project.getKtlintConfiguration(): Configuration {
-    return configurations.findByName("ktlint") ?: configurations.create("ktlint") {
-        val dependency = project.dependencies.create("com.pinterest:ktlint:0.46.1").apply {
-            attributes.attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+val ktlint by configurations.creating
+
+dependencies {
+    ktlint("com.pinterest.ktlint:ktlint-cli:1.0.1") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
         }
-        dependencies.add(dependency)
     }
+    // ktlint(project(":custom-ktlint-ruleset")) // in case of custom ruleset
 }
 
-tasks.register("ktlint", JavaExec::class) {
-    description = "Check Kotlin code style."
-    group = "Verification"
-    classpath = getKtlintConfiguration()
+tasks.register<JavaExec>("ktlint") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style"
+    classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
-    args = listOf(
-        "--reporter=plain",
-        "--android",
-        "--reporter=checkstyle,output=${project.buildDir}/reports/checkstyle/ktlint.xml",
-        "$project.rootDir/**/src/main/**/*.kt"
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+
+    args(
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+        "--reporter=checkstyle,output=${project.layout.buildDirectory.file(
+            "ktlintreport/ktlint.xml",
+        ).get().asFile.path}",
     )
 }
 
-tasks.register("ktlintFormat", JavaExec::class) {
-    description = "Fix Kotlin code style deviations."
-    group = "formatting"
-    classpath = getKtlintConfiguration()
+tasks.register<JavaExec>("ktlintFormat") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style and format"
+    classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
-    args = listOf("-F", "$project.rootDir/**/src/main/**/*.kt", "--android")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+    args(
+        "-F",
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+    )
+}
+
+sonarqube {
+    properties {
+        property("sonar.projectKey", "sora:sora-card-android")
+        property("sonar.projectName", "sora-card-android")
+        property("sonar.exclusions", "${project.projectDir}/**/*.txt,**/*Screen.kt")
+        property(
+            "sonar.junit.reportPaths",
+            "${project.projectDir}/build/reports/tests/testReleaseUnitTest",
+        )
+        property("sonar.coverage.jacoco.xmlReportPaths", "${project.rootDir}/report/coverage.xml")
+    }
 }
